fix: fix scrolling on small screens

--- a/client/scss/core/_main.scss
+++ b/client/scss/core/_main.scss
@@ -3,7 +3,6 @@ main {
   box-shadow: 0 0 1rem 0 var(--text-color);
   display: flex;
   flex-direction: column;
-  overflow: auto;
   position: relative;
   transform: scale(1) translateY(0);
   transform-origin: right top;
@@ -27,5 +26,9 @@ main {
   @media (max-width: 1300px) {
     min-height: 100vh;
     min-width: 100vw;
+  }
+
+  @media (min-width: 1300px) {
+    overflow: auto;
   }
 }
